# streamlit-firebase-tut

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.bak  Home.py  README.md  TO_DO.MD  app.py  bak-81-Trig.py  bashscripts.sh  compose.yaml  fanchart.py  josh_json.py  lefthanded.txt  my_pyppeteer.py  pyproject.toml  reboot.py  reboot.sh  recreate_pdf.py  requirements.txt  rerun.sh  soaperschoice.py  test.py  utils.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
future_pages/: 0053_Add_Goal.py  012_Search_the_Scriptures.py  020_DB_Admin.py  0300_Fan_Chart.py  030_Mongo_Admin.py  040_Backup_and_Restore.py  0410_Emojis.py  041_Mongo_Backup_and_Restore.py  043_File_Operations.py  050_goals.py  070-Get_Costs.py  0700-Cubism.py  0800-Pointillism.py  080_PYDANTIC.py  Template.py  fanchart.py
logs/: darkmode.css  griscom.txt  logs-bonniesites-streamlit-firebase-tut-main-Home.py-2023-09-21T13_18_32.998Z.txt  pico-leader.py
mods/: admin.py  auth_firestore.py  base.py  calc_functions.py  data_processing.py  db.py  db_functions.py  dbconnect.py  del_options.py  firebase.py  header.py  imports.py  models.py  snippets.py  sql_lite3.py  test_data.py  utils.py  variables.py  visualization.py
pages/: 0000_All_Goals.py  0001_Bugs_Features.py  0002_Done.py  0003_Transfer_Data.py  0004_Open.py  000_Admin.py  001-GoalsApp.py  001_All_Goals.py  001_Journal.py  002_Done.py  002_Search_the_Scriptures.py  003_DB_Admin.py  003_Mongo_Admin.py  004_Backup_and_Restore.py  004_Open.py  005_Newsfeed.py  006-Time_Tracker.py  007-Cubism.py  007_My_SMART_Journal.py  009_CRUD.py  (+64 more)
(+85 files in other folders)
