[tool.poetry]
name = "my-reddit"
version = "0.1.0"
description = "Clone of Reddit"
authors = ["Doris Rush-Lopez <info@bonnysites.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.30.0"
streamlit-authenticator-mongo = "^0.1.5"
pillow = "^10.2.0"
pymongo = "^4.6.1"
python-Levenshtein = "^0.24.0"
fuzzywuzzy = "^0.18.0"
streamlit-modal = "^0.1.2"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
