[tool.poetry]
name = "my-reddit"
version = "0.1.0"
description = "Clone of Reddit"
authors = ["Doris Rush-Lopez <info@bonnysites.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit-nightly = ">=0.80.0.dev202201010"
streamlit-authenticator-mongo = "*"
pillow = "*"
pandas = "*"
pymongo = "*"
python-Levenshtein = "*"
fuzzywuzzy = "*"
streamlit-modal = "*"
colorama = "*"
google-cloud-firestore = "*"
streamlit-extras = "*"
pydantic = "*"
pydantic-settings = "*"
streamlit-pydantic = {git = "https://github.com/LukasMasuch/streamlit-pydantic.git"}
plotly-express = "*"
datamodel-code-generator = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
